# BRAGD

./: .gitignore  LICENSE  POS_tagger.py  README.md  compute_statistics.py  data_utils.py  generate_tables.py  inference.py  make_splits.py  pyproject.toml  requirements.txt
data/: BRAGD_tagset.md  OOD-BRAGD.json  Sosialurin-BRAGD.tsv  Sosialurin-BRAGD_tags.csv  split_indices.npy
results/abltagger/: ood_summary.json  val_summary.json
results/all_splits_eval_bragd_adamw/fold_0_multilabel/: best_results.json  epoch_10_results.json  epoch_11_results.json  epoch_12_results.json  epoch_13_results.json  epoch_14_results.json  epoch_15_results.json  epoch_16_results.json  epoch_17_results.json  epoch_18_results.json  epoch_19_results.json  epoch_1_results.json  epoch_20_results.json  epoch_2_results.json  epoch_3_results.json  epoch_4_results.json  epoch_5_results.json  epoch_6_results.json  epoch_7_results.json  epoch_8_results.json  epoch_9_results.json  ood_results.json
results/all_splits_eval_bragd_adamw/fold_0_multilabel_unconstrained_unnormalized/: best_results.json  epoch_10_results.json  epoch_11_results.json  epoch_12_results.json  epoch_13_results.json  epoch_1_results.json  epoch_2_results.json  epoch_3_results.json  epoch_4_results.json  epoch_5_results.json  epoch_6_results.json  epoch_7_results.json  epoch_8_results.json  epoch_9_results.json  ood_results.json
results/all_splits_eval_bragd_adamw/fold_0_singlelabel/: best_results.json  epoch_10_results.json  epoch_11_results.json  epoch_12_results.json  (+13 more)
scripts/: train_all_bragd.sh  train_release_model.sh
(+472 files in other folders)
