[project]
name = "faroese-pos"
version = "1.0.0"
description = "BRAGD: Constrained Multi-Label POS Tagging for Faroese"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers==4.41.2",
    "sentencepiece",
    "numpy>=1.24",
    "pandas>=2.0",
    "evaluate>=0.4",
    "tqdm>=4.60",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "nltk>=3.8",
]

[project.optional-dependencies]
logging = ["wandb>=0.15"]
upload = ["huggingface-hub>=0.20"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["data*", "results*"]